# dia

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_ai_usage.py  0003_add_is_test.py  0004_add_clients.py  0005_audit_log.py
app/: __init__.py  config.py  database.py  dependencies.py  main.py
app/api/v1/: __init__.py  alerts.py  clients.py  dams.py  events.py  forecasts.py  metrics.py  reports.py  tasks.py  test_harness.py
app/models/: __init__.py  ai_usage.py  alert.py  audit_log.py  client.py  dam.py  event.py  forecast.py  report.py
app/schemas/: __init__.py  _form.py  alert.py  client.py  dam.py  event.py  forecast.py  report.py  test_harness.py
app/services/ai/: __init__.py  claude_client.py  context_builder.py  report_generator.py
app/services/climate/: aggregator.py  ana.py  inmet.py  open_meteo.py
app/services/news/: __init__.py  classifier.py  scraper.py  sources.py
app/services/notifications/: __init__.py  dispatcher.py  email.py  whatsapp.py
app/services/reports/: __init__.py  pdf.py
app/tasks/: celery_app.py  climate_tasks.py  news_tasks.py  notification_tasks.py  report_tasks.py
app/utils/: ai_costs.py  audit.py  logging.py  severity.py
app/web/: router.py
app/web/static/css/: app.css
app/web/static/js/: app.js
app/web/templates/: base.html  dashboard.html  test_harness.html
app/web/templates/clients/: form.html  list.html
app/web/templates/dams/: detail.html  form.html  list.html
app/web/templates/events/: list.html
app/web/templates/partials/: alerts.html  counters.html  report_status.html
app/web/templates/reports/: detail.html  list.html
docs/: reverse-proxy-caddy.md
docs/n8n-flows/: SETUP.md  dam-alerts.json
docs/research/: cemaden-2026-04.md
scripts/: deploy-nginx.sh  deploy.sh  probe_cemaden.py  seed_dams.py  smoke_ana.py  smoke_report.py
scripts/fixtures/ana/: ana_mg_sample.json  chuva_station_1942008_2024.json
scripts/fixtures/cemaden/: probe-20260425T075135Z.json
tests/: conftest.py  test_aggregator.py  test_alert_expiration.py  test_api_endpoints.py  test_audit_and_robustness.py  test_clients_and_dams_ui.py  test_climate_parsing.py  test_context_builder.py  test_notifications.py  test_test_harness.py
