[project]
name = "dia"
version = "0.1.0"
description = "Dam Intelligence Agent — autonomous climate monitoring for dams (Fractal Engenharia)"
requires-python = ">=3.11"
readme = "README.md"
authors = [
    { name = "Fractal Engenharia" },
]

dependencies = [
    # --- Web framework ---
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
    "itsdangerous>=2.2.0",

    # --- Database ---
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",  # for alembic sync ops

    # --- Cache / broker ---
    "redis[hiredis]>=5.0.4",

    # --- Task queue ---
    "celery>=5.4.0",
    "celery-redbeat>=2.2.0",
    "flower>=2.0.1",

    # --- HTTP clients ---
    "httpx>=0.27.0",
    "aiohttp>=3.9.5",

    # --- Web scraping ---
    "beautifulsoup4>=4.12.3",
    "playwright>=1.44.0",
    "lxml>=5.2.2",
    "feedparser>=6.0.11",

    # --- AI ---
    "anthropic>=0.40.0",

    # --- Validation / config ---
    "pydantic>=2.7.1",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",

    # --- Geo / data ---
    "geopy>=2.4.1",
    "pandas>=2.2.2",
    "numpy>=1.26.4",

    # --- Reports (HTML -> PDF) ---
    "weasyprint>=62.3",
    "markdown>=3.6",

    # --- Dates ---
    "arrow>=1.3.0",

    # --- Email ---
    "aiosmtplib>=3.0.1",

    # --- Logging / error tracking ---
    "structlog>=24.2.0",
    "rich>=13.7.1",
    # Sentry — captura exceções unhandled em prod. No-op silencioso quando
    # SENTRY_DSN não está setado (dev/test); ativa quando setado.
    "sentry-sdk[fastapi]>=2.10.0",

    # --- Utilities ---
    "tenacity>=8.3.0",
    "orjson>=3.10.3",
    "humanize>=4.9.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-httpx>=0.30.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    # SQLite async driver para tests — evita precisar de postgres nos
    # testes offline. As models usam tipos genéricos (JSON/Date/DateTime)
    # que o dialect aiosqlite suporta direto.
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
